fix parameters